jira/kubernetes/jira-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jira-svc
  namespace: ci
spec:
  ports:
  - name: http  
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: jira
